# python-devops-cicd-project

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  python-ci.yaml
src/simple_http_checker/: checker.py
tests/: test_checker.py  test_cli.py
